--- a/Etapa 3/Makefile
+++ b/Etapa 3/Makefile
@@ -1,5 +1,5 @@
-etapa3: main.o hash.o lex.yy.o y.tab.o ast.o semantic.o
-	gcc main.o hash.o lex.yy.o y.tab.o ast.o semantic.o -o etapa4
+etapa3: main.o hash.o lex.yy.o y.tab.o ast.o
+	gcc main.o hash.o lex.yy.o y.tab.o ast.o -o etapa3
 
 main.o: main.c
 	gcc -c main.c
@@ -9,9 +9,6 @@ ast.o: ast.c
 
 hash.o: hash.c
 	gcc -c hash.c
-
-semantic.o: semantic.c
-	gcc -c semantic.c
 
 lex.yy.o: lex.yy.c
 	gcc -c lex.yy.c
@@ -26,4 +23,4 @@ y.tab.c: parser.y
 	yacc -d parser.y
 
 clean:
-	rm *.o etapa4 lex.yy.c y.tab.c
+	rm *.o etapa3 lex.yy.c y.tab.c
