--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "stdlib.h": "c",
         "token.h": "c",
         "y.tab.h": "c",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "semantic.h": "c"
     }
 }
