--- a/Etapa 5/Makefile
+++ b/Etapa 5/Makefile
@@ -1,5 +1,5 @@
-etapa6: main.o hash.o lex.yy.o y.tab.o ast.o tacs.o semantic.o assembly_gen.o
-	gcc main.o hash.o lex.yy.o y.tab.o ast.o tacs.o semantic.o assembly_gen.o -o etapa6
+etapa5: main.o hash.o lex.yy.o y.tab.o ast.o tacs.o semantic.o
+	gcc main.o hash.o lex.yy.o y.tab.o ast.o tacs.o semantic.o -o etapa5
 
 main.o: main.c
 	gcc -c -Wall  main.c
@@ -15,9 +15,6 @@ hash.o: hash.c
 
 semantic.o: semantic.c
 	gcc -c -Wall semantic.c
-
-assembly_gen.o: assembly_gen.c
-	gcc -c -Wall assembly_gen.c
 
 lex.yy.o: lex.yy.c
 	gcc -c -Wall lex.yy.c
